Preventing highlight teasers from overflowing hidden content

--- a/themes/shell/styles/components/_teasers.scss
+++ b/themes/shell/styles/components/_teasers.scss
@@ -16,6 +16,7 @@
   .views-row{
     width: 33.33333%;
     position: relative;
+    overflow: hidden;
 
     &:hover{
 
